tests/golden/fixtures/emit-err-bare-label-needs-immediate/expected.err
Error: mnemonic 'pea' does not accept this operand
    ╭─[ tests/golden/fixtures/emit-err-bare-label-needs-immediate/input.k65:13:5 ]
    │
 13 │     pea prompt
    │     ─────┬────  
    │          ╰────── address operand
    │ 
    │ Help: `pea` requires an immediate operand; use `pea #&&prompt` to pass the 16-bit address of `prompt`
────╯

Error: mnemonic 'cop' does not accept this operand
    ╭─[ tests/golden/fixtures/emit-err-bare-label-needs-immediate/input.k65:14:5 ]
    │
 14 │     cop handler
    │     ─────┬─────  
    │          ╰─────── address operand
    │ 
    │ Help: `cop` requires an immediate operand; pass a `#`-prefixed constant value (e.g. `cop #$00`)
    │ 
    │ Note: On the W65C816, `cop` is the coprocessor / OS-trap software interrupt: the byte immediately after the opcode is a signature byte that the COP vector handler reads to dispatch the trap. The K816 encoder always requires it (write `cop #$00` if you have nothing meaningful to put there).
────╯
